welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:16: error: not found: value vuBiscuit
				return vuBiscuit
                                       ^Program:24: error: not found: value vuBiscuit
}while (!vuBiscuit())
         ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
do{
^